Here are the three pages, more or less complete, not appearance wise orin the correct order, or functionaly

--- a/dansFolder/style.css
+++ b/dansFolder/style.css
@@ -94,7 +94,8 @@ main {
     justify-content: center;
 }
 
-main div[ng-view] .age-range button{
+main div[ng-view] .age-range button,
+main div[ng-view] .location button {
     background-color: tomato;
     border: none;
     color: white;
