--- a/style.css
+++ b/style.css
@@ -88,3 +88,25 @@
     right: 10%;
 
 }
+
+.match_body {
+    width:85vw;
+    margin:auto;
+}
+
+.match_card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.match_buttons {
+    box-sizing: border-box;
+    display:flex;
+    justify-content: space-around;
+    margin-top:8vw;
+}
+
+.btn.btn_match {
+    width:24vw;
+    height:24vw;
+    border-radius: 12vw;
+}
