--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 /*Log-in page */
-<<<<<<< HEAD
-.login_body, .welcome_body, .location_body{
-=======
-.login_body, .welcome_body,.match_body{
->>>>>>> f62229a05e8bd0b45f5bd7a74ed3eb057fd19d98
+.login_body, .welcome_body, .location_body,.match_body{
     background-color: #B2DFDB;
     overflow:visible;
     color:white;
@@ -130,7 +126,6 @@
     color:grey;
 }
 
-<<<<<<< HEAD
 .previous-next{
     margin-top:10%;
 }
@@ -166,7 +161,6 @@
 }
 .selectedButton{
     background-color: #368e8b;
-=======
 }
 
 .match_content {
@@ -201,5 +195,4 @@
     height:24vw;
     border-radius: 12vw;
     font-size: 2.5em;
->>>>>>> f62229a05e8bd0b45f5bd7a74ed3eb057fd19d98
 }
