--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 /*Log-in page */
-<<<<<<< HEAD
-.login_body, .welcome_body, .location_body{
-=======
-.login_body, .welcome_body,.match_body{
->>>>>>> f62229a05e8bd0b45f5bd7a74ed3eb057fd19d98
+.login_body, .welcome_body,.match_body, .location_body{
     background-color: #B2DFDB;
     overflow:visible;
     color:white;
@@ -49,7 +45,7 @@
     bottom: 20%;
 }
 
-.login_body .chevronButtonContainer .chevronButton{
+.login_body .chevronButtonContainer .chevronButton .intialSubmit{
     position: absolute;
     right: 10%;
 }
@@ -64,7 +60,7 @@
 .welcome_body{
     font-size: 3em;
     position: absolute;
-    bottom: 50%;
+    /*bottom: 50%;*/
     right: 52.5%;
     transform: translate(54%,47%);
     height: 30vh;
@@ -85,13 +81,13 @@
     margin-top: 2%;
 }
 
-.login_body .chevronButton:hover,
-.login_body .chevronButton:focus,
-.login_body .chevronButton:active,
+.login_body .chevronButton:hover .initalSubmit:hover,
+.login_body .chevronButton:focus .initialSubmit:focus,
+.login_body .chevronButton:active .initialSubmit:active,
 .welcome_body .btn-default:hover,
 .welcome_body .btn-default:focus,
 .welcome_body .btn-default:active,
-.open>.dropdown-toggle.welcome_body .btn .btn-default .chevronButton {
+.open>.dropdown-toggle.welcome_body .btn .btn-default .chevronButton .initialSubmit{
     background-color: #368e8b;
     color:white;
     /*border-color:;*/
@@ -130,7 +126,6 @@
     color:grey;
 }
 
-<<<<<<< HEAD
 .previous-next{
     margin-top:10%;
 }
@@ -152,11 +147,15 @@
     border: 1px #E9D555 solid;
 }
 
-/*interests page*/
+/*interests pages*/
 .interest-btn-home, .interest-btn-out, .interest-btn-active, .interest-btn-travel{
     padding: 3%;
     margin-bottom: 5%;
     font-size: 16px;
+}
+
+.initialSubmit{
+    padding:15px;
 }
 
 /*sign-up email page*/
@@ -166,11 +165,10 @@
 }
 .selectedButton{
     background-color: #368e8b;
-=======
 }
 
 .match_content {
-    width:85vw;
+    width:78vw;
     margin:auto;
     font-size: 0.7em;
 }
@@ -201,5 +199,18 @@
     height:24vw;
     border-radius: 12vw;
     font-size: 2.5em;
->>>>>>> f62229a05e8bd0b45f5bd7a74ed3eb057fd19d98
+}
+
+.match_interests, .match_description{
+    text-align: center;
+}
+
+
+/*before sample match page*/
+.sample_paragraph{
+    font-size:23px;
+}
+
+.btn-block{
+    font-size: 20px;
 }
