--- a/style.css
+++ b/style.css
@@ -220,3 +220,44 @@
     color:red;
     font-size: 0.75em;
 }
+
+.faq_body{
+    background-color: #B2DFDB;
+    overflow:visible;
+    color:white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    vertical-align: middle;
+    font-size: 3em;
+    margin:0;
+    padding: 10px;
+    width:100%;
+    height:100%;
+    min-height:100%;
+}
+.faq_body h1 {
+    margin: 5%;
+}
+div.list-group {
+    margin: 10%;
+    font-size:0.5em;
+    position:relative;
+    color: black;
+}
+.question {
+    font-weight:bold;
+}
+.answer{
+    font-size: 0.75em;
+    /*display:none;*/
+    height:auto;
+    width:100%;
+    background:white;
+    color:black;
+    border: 1px solid rgb(221, 221, 221);
+    padding: 5px 20px;
+}
+
+.question,
+.answer {
+    cursor: pointer;
+}
