--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*Log-in page */
-.login_body, .welcome_body, .location_body {
+.welcome_body, .location_body {
     background-color: #B2DFDB;
     overflow:visible;
     color:white;
@@ -9,16 +9,8 @@
     position:relative;
 }
 
-.login_body::before{
-    content:"";
-    height:100%;
-    width: 100%;
-    position: absolute;
-}
-
 .form-group {
     position: absolute;
-    bottom: 90%;
     right: 50%;
     transform: translate(55%,45%);
     height: 32vh;
@@ -30,31 +22,11 @@
     height:20%;
 }
 
-.login_body{
-    height:95vh;
-}
-
-.forgotPW{
+.forgot-password{
     font-size: 0.65em;
     position:relative;
     bottom: 38px;
 }
-
-.login_body .chevronButtonContainer{
-    position: relative;
-    bottom: 20%;
-}
-
-.login_body .chevronButtonContainer .chevronButton .intialSubmit{
-    position: absolute;
-    right: 10%;
-}
-
-.login_button{
-    position: relative;
-    right: 49%;
-}
-
 
 /*welcome page*/
 .welcome_body{
@@ -81,9 +53,6 @@
     margin-top: 2%;
 }
 
-.login_body .chevronButton:hover .initalSubmit:hover,
-.login_body .chevronButton:focus .initialSubmit:focus,
-.login_body .chevronButton:active .initialSubmit:active,
 .welcome_body .btn-default:hover,
 .welcome_body .btn-default:focus,
 .welcome_body .btn-default:active,
