--- a/style.css
+++ b/style.css
@@ -228,9 +228,9 @@ FREQUENTLY ASKED QUESTIONS
     color:white;
     font-family: 'Open Sans Condensed', sans-serif;
     vertical-align: middle;
-    font-size: 3em;
+    font-size: 1.5em;
     margin:0;
-    padding: 10px;
+    padding: 5px;
     width:100%;
     height:100%;
     min-height:100%;
@@ -291,6 +291,8 @@ SignUp Paragraph
     color:  black;
     width: 100%;
     max-width: 100%;
+    font-family: 'Calibri', sans-serif;
+    font-size: .65em;
 }
 .signup-paragraph-page p .alert {
     margin-bottom: 15px;
@@ -300,15 +302,24 @@ SignUp Paragraph
 Terms and Conditions page
 **********************/
 
-.terms-and-conditions textarea{
+.terms-and-conditions .textarea{
     width: 100%;
     max-width: 100%;
     color: black;
+    background-color: white;
     height: 50vh;
     margin-bottom: 10px;
+    font-size: .65em;
+    font-family: 'Calibri', sans-serif;
+    overflow: scroll;
+    list-style: none;
+    padding: 15px;
+
 }
+
 .terms-and-conditions input[type=checkbox] {
-    width: 30px;
+    margin-right: 15px;
+    margin-bottom: 15px;
 }
 
 .terms-and-conditions button {
@@ -317,3 +328,4 @@ Terms and Conditions page
     margin-bottom: 100px;
     display: block;
 }
+
