--- a/style.css
+++ b/style.css
@@ -3,11 +3,29 @@ header{
     position: relative;
     bottom: 43%;
     text-align: center;
+    font-family: 'Francois One', sans-serif;
+    color: salmon;
+    height: 20%;
+    font-size: 100%;
+
+}
+
+.glyphicon-question-sign{
+    position: absolute;
+    left: 100%;
+    top: -58px;
+    color: gray;
+    border-radius: 100%;
+}
+
+.modal-body{
+    color: slategrey;
+    font-size: 19px;
 }
 
 
 /*Log-in page */
-.welcome_body, .location_body {
+.welcome_body {
     background-color: #B2DFDB;
     overflow:visible;
     color:white;
@@ -80,8 +98,6 @@ header{
 }
 
 .chevronButton{
-    /*background-color: #4cad8d;*/
-    /*color:white;*/
     border-radius: 100%;
     width: 47px;
     height:47px;
@@ -222,24 +238,24 @@ header{
 FREQUENTLY ASKED QUESTIONS
 **************************/
 
-
-
-
 .faq_body{
-    background-color: #B2DFDB;
+    /*background-color: #B2DFDB;*/
     overflow:visible;
-    color:white;
+    /*color:white;*/
     font-family: 'Open Sans Condensed', sans-serif;
     vertical-align: middle;
-    font-size: 3em;
+    font-size: 2em;
     margin:0;
-    padding: 10px;
+    /*padding: 10px;*/
     width:100%;
     height:100%;
     min-height:100%;
 }
 .faq_body h1 {
-    margin: 5%;
+    /*margin: 5%;*/
+    text-align:center;
+    font-family: 'Francois One', sans-serif;
+    color:gray;
 }
 div.list-group {
     margin: 10%;
