Added the add_name page and routing, plus added the controller skeleton addNameController

--- a/style.css
+++ b/style.css
@@ -348,3 +348,11 @@ Terms and Conditions page
     display: block;
 }
 
+
+/**********************
+Signup Photo page
+**********************/
+
+.signup-photo-page img {
+    max-width: 100%;
+}
