Make wine glass styling specific to only wine glass animation.

--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@ Matches Page - Extra edits
     0% {transform:rotate(0deg);}
     50% {transform:rotate(-22deg);}
 }
-ul {
+.body-wineglass ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -671,7 +671,7 @@ ul {
     opacity: 0;
     animation: 2s fadeInUp infinite linear 2s;
 }
-li {
+.body-wineglass li {
     width: 6px;
     height: 15px;
     background: white;
@@ -679,16 +679,16 @@ li {
     box-shadow: 0 0 1px white;
     transform-origin: bottom;
 }
-li:nth-child(1) {
+.body-wineglass li:nth-child(1) {
     left: 26px;
     bottom: 5px;
     transform: rotate(-35deg);
 }
-li:nth-child(2) {
+.body-wineglass li:nth-child(2) {
     left: 34px;
     bottom: 8px;
 }
-li:nth-child(3) {
+.body-wineglass li:nth-child(3) {
     left: 42px;
     bottom: 5px;
     transform: rotate(35deg);
